--- a/src/sass/components/_subscribe.scss
+++ b/src/sass/components/_subscribe.scss
@@ -24,7 +24,7 @@
 
 .subscribe__text {
   margin-bottom: 24px;
-  width: 656px;
+  //   width: 656px;
 }
 .subscribe__btn {
   width: 106px;
